adding basic styling to html pg

--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
         <link rel="stylesheet" href="CSS/styles.css" />
     </head>
     <body>
-        <header>Giphy API Search</header>
-
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-            <a class="nav-link active" href="#">Search</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-            </li>
-        </ul>
-        
+        <header class="row">
+            <div class="col-md-6">
+                <h1>Giphy API Search</h1>
+            </div>
+            <div class="col-md-6">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
         <form>
             Find GIFs:
             <input type="text" action="#" method="post"/>
-            <button type="button">Submit</button>
+            <button type="button" class="success">Submit</button>
         </form>
 
         <section class="container">
@@ -38,5 +42,5 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"
             integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
