--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </header>
         <form>
             Find GIFs:
-            <input type="text" action="#" method="post"/>
-            <button type="button" class="success">Submit</button>
+            <input class="text1" type="text" action="#" />
+            <button type="button" id="button1" class="success">Submit</button>
         </form>
 
-        <section class="container">
-            
-        </section>
+        <ul class="container">
+
+        </ul>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -42,5 +42,6 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"
             integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
