finished javascript files

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         </header>
         <form>
             Find GIFs:
-            <input class="text1" type="text" action="#" />
+            <input class="text1" type="text" action="#" placeholder="Enter a word or phrase"/>
             <button type="button" id="button1" class="success">Submit</button>
+            <div class="error"></div>
         </form>
 
         <section class="imgcontainer">
