--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="CSS/styles.css" />
     </head>
+
     <body>
         <header class="row">
-            <div class="col-md-6">
-                <h1>Giphy API Search</h1>
+            <div class="col-md-6 col-sm-pull-12">
+                <h1 id="title">Giphy API Search</h1>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-12">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Search</a>
@@ -26,16 +27,21 @@
                 </ul>
             </div>
         </header>
+
         <form>
             Find GIFs:
             <input class="text1" type="text" action="#" placeholder="Enter a word or phrase"/>
-            <button type="button" id="button1" class="success">Submit</button>
+            <button type="button" id="button1">Submit</button>
             <div class="error"></div>
         </form>
 
         <section class="imgcontainer">
 
         </section>
+
+        <div class="top">
+            <a href="#title">Back to Top</a>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -45,4 +51,8 @@
             crossorigin="anonymous"></script>
         <script src="scripts/main.js"></script>
     </body>
+
+    <footer>
+        <img class="glogo" src="giphy_images/PoweredBy_200px-Black_HorizLogo.png" alt="powered by Giphy" />
+    </footer>
 </html>
