added media queries to scss

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <body>
         <header class="row">
-            <div class="col-md-6 col-sm-pull-12">
+            <div class="col-xs-12 col-sm-6 order-xs-2">
                 <h1 id="title">Giphy API Search</h1>
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-xs-12 col-sm-6 order-xs-1">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Search</a>
