--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <body>
         <header class="row">
-            <div class="col-xs-12 col-sm-6 order-xs-2">
+            <div class="col-xs-12 col-sm-6">
                 <h1 id="title">Giphy API Search</h1>
             </div>
-            <div class="col-xs-12 col-sm-6 order-xs-1">
+            <div class="col-xs-12 col-sm-6">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Search</a>
@@ -31,7 +31,7 @@
         <form>
             Find GIFs:
             <input class="text1" type="text" action="#" placeholder="Enter a word or phrase"/>
-            <button type="button" id="button1">Submit</button>
+            <button type="button" class="button1">Submit</button>
             <div class="error"></div>
         </form>
 
